--- a/LH_SPI -420 -(3)__ TM7707_/USER/Template.uvprojx
+++ b/LH_SPI -420 -(3)__ TM7707_/USER/Template.uvprojx
@@ -47,7 +47,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>..\OBJ\</OutputDirectory>
-          <OutputName>tt</OutputName>
+          <OutputName>tt2122</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>1</CreateHexFile>
